<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFB"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/settings"
        android:textColor="#37474F"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Settings Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Profile Settings -->
        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#56C596"
            android:text="@string/edit_profile"
            android:textColor="#FFFFFF" />

        <!-- Notification Settings -->
        <Button
            android:id="@+id/btnNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#56C596"
            android:text="@string/notifications"
            android:textColor="#FFFFFF" />

        <!-- Currency Settings -->
    </LinearLayout>

    <!-- Back Button -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFA726"
        android:text="@string/back"
        android:textColor="#FFFFFF" />
</LinearLayout>