<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/geoledger"
        android:textSize="24sp"
        android:textStyle="bold" />


    <!-- Map container -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_above="@id/navigationLayout" />

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/navigationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFA726"
            android:text="@string/record"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/summary"
            android:textColor="#37474F" />

        <Button
            android:id="@+id/btnMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/me"
            android:textColor="#37474F" />
    </LinearLayout>


</RelativeLayout>