<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bac4d1">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="Animation.json"
        app:lottie_loop="true" />

    <!-- Use @string/get_your_life with highlight color -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="616dp"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/get_your_life"
        android:textColor="@color/highlightYellow"
        android:textSize="48sp" />

    <!-- Use @string/get_your_life with blue color -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/get_your_life"
        android:textColor="@color/thirdBlue"
        android:textSize="48sp" />

    <!-- Use @string/organized with highlight color -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="438dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/organized"
        android:textColor="@color/highlightYellow"
        android:textSize="34sp" />

    <!-- Use @string/organized with blue color -->
    <TextView
        android:layout_width="438dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:text="@string/organized"
        android:textColor="@color/thirdBlue"
        android:textSize="34sp" />

    <!-- Use @string/in_a_click with highlight color -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="171dp"
        android:layout_height="258dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:lineSpacingExtra="34sp"
        android:text="@string/in_a_click"
        android:textColor="@color/highlightYellow"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <!-- Use @string/in_a_click with blue color -->
    <TextView
        android:layout_width="160dp"
        android:layout_height="258dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:lineSpacingExtra="34sp"
        android:text="@string/in_a_click"
        android:textColor="@color/thirdBlue"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <!-- Use @string/get_started -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/startApp"
        android:layout_width="176dp"
        android:layout_height="67dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="50dp"
        app:backgroundTint="@color/highlightYellow"
        android:text="@string/get_started"
        android:textColor="@color/strokeBlack"
        android:textSize="20sp" />

</FrameLayout>
